--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
             </div>
             <button onclick="resetScore()">Reset Score</button>
         </div>
-        <p style="margin-top: 30px;">Copyright &copy; since <script> document.write(new Date().getFullYear()) </script> </p>
-        <p>Built by Franklin </p>
+    </div>
+    <div class="footer">
+     <p>Copyright &copy; since <script> document.write(new Date().getFullYear()) </script> </p>
+     <p>Built by Franklin </p>
     </div>
 
     <script src="/main.js"></script>
