--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <div class="score">
             <div class="scoreNumbers">
                 <div>
-                    <p>Player X Score:</p><span class="playerXScore"></span>
+                    <p>Player X Score</p><span class="playerXScore"></span>
                 </div>
                 <div>
-                    <p>Player O Score:</p><span class="playerOScore"></span>
+                    <p>Player O Score</p><span class="playerOScore"></span>
                 </div>
             </div>
             <button onclick="resetScore()">Reset Score</button>
@@ -37,7 +37,7 @@
     </div>
     <div class="footer">
      <p>Copyright &copy; since <script> document.write(new Date().getFullYear()) </script> </p>
-     <p>Built by Franklin </p>
+     <p style="font-size: 14px; font-weight: 700;">Built by Franklin (a.k.a => AZA MAN)</p>
     </div>
 
     <script src="/main.js"></script>
