--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+    <div class="modalWrapper">
+        <h1 class="currentPlayer"></h1>
+        <button onclick="restartGame()">Restart</button>
+    </div>
     <div class="container">
         <h1>Tic Tac Toe</h1>
         <button onclick="restartGame()">Restart</button>
