--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
         <i>=</i>
     </nav>
     <div class="modalWrapper">
-        <h1 class="winnerPlayerText"></h1>
-        <button onclick="restartGame()">Restart</button>
+        <div>
+            <h1 class="winnerPlayerText"></h1>
+            <button onclick="restartGame()">Restart</button>
+        </div>
     </div>
     <div class="container">
         <h1 class="currentPlayerText"></h1>
