--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
         <h2>Tic Tac Toe</h2>
         <i class="ri-menu-line" onclick="openNav()" style="font-size: 22px; cursor: pointer;"></i>
         <div class="navLinks">
-            <a href="#">Home</a>
-            <a href="#">Home</a>
+            <!-- <a href="#">Home</a>
+            <a href="#">Home</a> -->
+            <p>Oga play game no dey click button anyhow like mad person</p>
         </div>
     </nav>
 
