--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
         <h2>Tic Tac Toe</h2>
         <i class="ri-menu-line" onclick="openNav()" style="font-size: 22px; cursor: pointer;"></i>
         <div class="navLinks">
-            <!-- <a href="#">Home</a>
-            <a href="#">Home</a> -->
             <p>Oga play game no dey click button anyhow like mad person</p>
         </div>
     </nav>
@@ -28,7 +26,20 @@
         </div>
         <div class="container">
             <h1 class="currentPlayerText"></h1>
-            <button onclick="restartGame()">Restart</button>
+
+            <div class="score">
+                <div class="scoreNumbers">
+                    <div>
+                        <p>Player X Score</p><span class="playerXScore"></span>
+                    </div>
+                    :
+                    <div>
+                        <p>Player O Score</p><span class="playerOScore"></span>
+                    </div>
+                </div>
+                
+            </div>
+
             <div id="gameBoard">
                 <div class="box" id="0"></div>
                 <div class="box" id="1"></div>
@@ -40,17 +51,10 @@
                 <div class="box" id="7"></div>
                 <div class="box" id="8"></div>
             </div>
-            <div class="score">
-                <div class="scoreNumbers">
-                    <div>
-                        <p>Player X Score</p><span class="playerXScore"></span>
-                    </div>
-                    <div>
-                        <p>Player O Score</p><span class="playerOScore"></span>
-                    </div>
-                </div>
-                <button onclick="resetScore()">Reset Score</button>
-            </div>
+
+            <button onclick="resetScore()">Reset Score</button>
+            <button onclick="restartGame()">Restart Game</button>
+            
         </div>
         <div class="footer">
          <p>Copyright &copy; since <script> document.write(new Date().getFullYear()) </script> </p>
