added a readme.md file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <h2>Tic Tac Toe</h2>
         <i class="ri-menu-line" onclick="openNav()" style="font-size: 22px; cursor: pointer;"></i>
         <div class="navLinks">
-            <p>Oga play game no dey click button anyhow like mad person</p>
+            <p>Multiplayer</p>
+            <p>Play with computer</p>
         </div>
     </nav>
 
